--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,108 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+/* style for the jsx image tag and heading tag */
+/* {
+  padding: 0%;
+  margin: 0%;
+  background-color: antiquewhite;
+  box-sizing: border-box;
+}
+
+.heading_style{
+  padding: 30px 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  background-color: aliceblue;
+  color: aqua; 
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+  background-color: rgb(242, 242, 230);
+}
+.img_div{
+  justify-content: center;
+  display: flex;
+  
+}
+.img_div img{
+  height: 200px;
+  width: 200px;
+  margin: 30px;
+  padding: 30px;
+}
+.box{
+  padding: 30px 0;
+  
+  text-align: center;
+  font-size: 13px;
+  letter-spacing: 1px;
+  font-weight: 500;
+  background-color: aliceblue;
+  font-size: 0.5rem;
+  background-color: rgb(242, 242, 230);
+} */
+.maindiv{
+  background-color: cadetblue;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  border: 2px solid sandybrown;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.centerdiv{
+  background-color: aqua;
+  justify-content: center;
+  align-items: center;
+}
+.centerdiv>h1{
+  background-color: rgb(250, 204, 88);
+  width: 360px;
+  text-align: center;
+}
+.centerdiv>input{
+  text-align: center;
+  background: transparent;
+  height: 30px;
+  top: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid rebeccapurple;
+  outline:'none';
+  border: 'None';
+}
+
+h1{
+  color: black;
+  margin-bottom: 0%;
+}
+button{
+  background-color: aquamarine;
+  color: darkorange;
+  /* padding: 20px; */
+  /* margin-top: 0%; */
+  border-radius: 50px;
+
+}
+button:hover{
+  background-color: brown;
+  
+}
+ol li{
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0px;
+  text-align: left;
+  min-height: 40px;
+  display: flex;
+  text-transform: capitalize;
+  align-items: center;
+  color: blueviolet;
 }
