--- a/src/index.css
+++ b/src/index.css
@@ -57,8 +57,8 @@ code {
 } */
 .maindiv{
   background-color: cadetblue;
-  width: 100%;
-  height: 100vh;
+  /* width: 100%;
+  height: 100vh; */
   flex-direction: column;
   border: 2px solid sandybrown;
   display: flex;
@@ -89,8 +89,9 @@ code {
 }
 
 h1{
-  color: black;
+  color: rgb(245, 9, 9);
   margin-bottom: 0%;
+  text-decoration: underline aqua;
 }
 button{
   background-color: aquamarine;
